--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,45 @@
     font-family: 'AR One Sans', sans-serif;
 }
 body {
-    font-size: clamp(0.7rem, 2vw, 1.4rem);
-    
+    font-size: clamp(0.7rem, 2vw, 1.2rem);
+    min-height: 100vh;
 }
+
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 10px;
+}
+
+
+main > * {
+    margin: 0px 15px;
+}
+
+main > svg {
+    margin: 0px;
+}
+
+main{
+    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.main_content{
+    background-color: #273036; 
+    height: 230px;
+    margin: 0;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px 35px 75px 35px;
+}
+
+.main_content > h1 {
+    margin-bottom: 0.9rem;
+}
+
